# BlueDemise

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  GameEngine.sln  LICENSE  README.md  README.md.bak  THREAD_README.txt
.github/workflows/: cmake.yml
BDTests/src/: test_engine.cpp
Engine/: CMakeLists.txt  CMakeLists.txt.bak  Engine.vcxproj  FrameBuffer.h  InputSystem.cpp  Serializer.cpp  Serializer.h
Engine/src/: Engine.h
Engine/src/Engine/: Application.cpp  Application.h  Audio.cpp  Audio.h  Components.h  ComponentsPanel.cpp  ComponentsPanel.h  Core.h  DeltaTime.h  EntitiesPanel.cpp  EntitiesPanel.h  Entity.cpp  Entity.h  EntryPoint.h  EventSystem.cpp  EventSystem.h  Explorer.cpp  Explorer.h  ExplorerPanel.cpp  ExplorerPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  ImportResources.cpp  ImportResources.h  InputSystem.cpp  InputSystem.h  InspectorPanel.cpp  InspectorPanel.h  JobQueue.cpp  JobQueue.h  Log.cpp  Log.h  MainMenu.cpp  MainMenu.h  RenderingSystem.h  RenderingSystem.h.bak  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  (+17 more)
Engine/src/Engine/EngineUI/: ComponentsPanel.cpp  ComponentsPanel.h  EntitiesPanel.cpp  EntitiesPanel.h  ExplorerPanel.cpp  ExplorerPanel.h  FrameBuffer.cpp  GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MainMenu.cpp  MainMenu.h  TagDialog.cpp  TagDialog.h  UserInterface.cpp  UserInterface.h
Engine/src/Engine/Physics/: AABB.cpp  AABB.h  OctNode.cpp  OctNode.h  OctTree.cpp  OctTree.h  PhysicsSystem.cpp  PhysicsSystem.h  Ray.h
Engine/src/Engine/Rendering/: AnimationSystem.cpp  AnimationSystem.h  GeometryFactory.cpp  GeometryFactory.h  Renderer.cpp  Renderer.h  UIRenderer.cpp  UIRenderer.h  Window.cpp  Window.h
Engine/src/Engine/ResourceManagement/: AdvancedShaderDistributor.cpp  AdvancedShaderDistributor.h  Audio.cpp  Audio.h  ResourceManager.cpp  ResourceManager.h  ScriptSerializer.cpp  ScriptSerializer.h  Serializer.cpp  Serializer.h  ShaderFillType.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderNorms.cpp  ShaderNorms.h  Text.cpp  Text.h
Engine/src/Engine/SceneBuilder/: Components.h  Entity.cpp  Entity.h  InputSystem.cpp  InputSystem.h  Scene.cpp  Scene.h
Engine/src/Engine/Scripts/: MovementScript.cpp  MovementScript.h  ScriptableBehavior.cpp  ScriptableBehavior.h
Engine/src/Engine/Shaders/: Fill.fs  Fill.vs
Engine/src/Engine/Utilities/: BasicUtilities.h  DeltaTime.h  Log.cpp  Log.h
Engine/src/Engine/Utilities/Multithreading/: JobQueue.cpp  JobQueue.h  Thread.cpp  ThreadJob.cpp  ThreadJob.h  ThreadPool.cpp  ThreadPool.h
Game/: CMakeLists.txt  Game.vcxproj  imgui.ini
Game/Assets/: animTest.bda  deserializeTest.bda  level1 - Copy.bda  level1.bda  level2.bda  level3.bda  level4.bda  level5.bda  test2.json  testScene.bda
Game/Assets/Scripts/: ColorSwap.cpp  ColorSwap.h  MoveRightScript.cpp  MoveRightScript.h  PlayerMovementScript.cpp  PlayerMovementScript.h  Score.cpp  Score.h  Timer.cpp  Timer.h
Game/Assets/Shaders/: GradientFill.fs  GradientFill.vs  SinWave.as  TextFill.fs  TextFill.vs  TextureFill.vs  framebuffer.fs  framebuffer.vs
Game/Data/: SaveData_Test.json
Game/Data/Shaders/: Fill.fs  Fill.vs
Game/Data/test/: test2.json
Game/src/: GameApp.cpp
Scripts/: ReflectScripts.py  ScriptsToMap.py  output.cpp  scriptSerializerTemplate.cpp
